small bug fix